# integrator

./: CMakeLists.txt  main.cpp
mathgl_patched_headers/mgl2/: config.h
